Add basic modal and security statement

--- a/src/assets/scss/word-tally.scss
+++ b/src/assets/scss/word-tally.scss
@@ -2,7 +2,9 @@
 @import 'atoms/_colors.scss';
 @import 'atoms/_responsive.scss';
 
+@import 'molecules/_modal.scss';
+
 @import 'components/_entry.scss';
 @import 'components/_results.scss';
-
+@import 'components/_security-statement.scss';
 @import 'components/_footer.scss';
