--- a/src/assets/scss/components/_primary-header.scss
+++ b/src/assets/scss/components/_primary-header.scss
@@ -1,3 +1,15 @@
+@import 'atoms/_clearfix.scss';
+
 .primary-header {
 	padding: .5em 0;
+	@include clearfix;
+
+	.logotype {
+		float: left;
+	}
+
+	.addthis_sharing_toolbox {
+		float: right;
+		margin: .25em 0 0 0;
+	}
 }
